--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 #################
 
 *.pydevproject
-.project
+#.project
 .metadata
 bin/
 tmp/
@@ -13,14 +13,14 @@ tmp/
 *~.nib
 local.properties
 .classpath
-.settings/
+#.settings/
 .loadpath
 
 # External tool builders
-.externalToolBuilders/
+#.externalToolBuilders/
 
 # Locally stored "Eclipse launch configurations"
-*.launch
+#*.launch
 
 # CDT-specific
 .cproject
